api-resources/default/b1aadecb-868c-46e9-a9bb-d38832958fb9/1/default_b1aadecb-868c-46e9-a9bb-d38832958fb9_v1_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: petstore
spec:
  hostnames:
  - api-controller.apicurio.integration-qe.com
  parentRefs:
  - name: istio-ingressgateway
    namespace: istio-system
  rules:
  - backendRefs:
    - name: petstore
      port: 80
    matches:
    - method: GET
      path:
        type: Exact
        value: /v1/dog
  - backendRefs:
    - name: petstore
      port: 80
    matches:
    - method: POST
      path:
        type: Exact
        value: /v1/dog
  - backendRefs:
    - name: petstore
      port: 80
    matches:
    - method: GET
      path:
        type: Exact
        value: /v1/cat
